<resources>
    <string name="app_name">Hermes Mobile</string>
    <string name="menu_agent">Agent</string>
    <string name="menu_projects">Projects</string>
    <string name="menu_files">Files</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_builds">Builds</string>
    <string name="menu_models">Models</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_header_title">Hermes Mobile</string>
    <string name="nav_header_subtitle">Your AI Agent Companion</string>
    <string name="welcome_message">Welcome to Hermes Mobile</string>
    <string name="type_message">Type a message...</string>
    <string name="send">Send</string>
    <string name="agent_typing">Agent is typing...</string>
</resources>