<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/agentFragment"
        android:icon="@drawable/ic_agent"
        android:title="@string/menu_agent" />
    <item
        android:id="@+id/projectsFragment"
        android:icon="@drawable/ic_folder"
        android:title="@string/menu_projects" />
    <item
        android:id="@+id/filesFragment"
        android:icon="@drawable/ic_file"
        android:title="@string/menu_files" />
    <item
        android:id="@+id/terminalFragment"
        android:icon="@drawable/ic_terminal"
        android:title="@string/menu_terminal" />
    <item
        android:id="@+id/skillsFragment"
        android:icon="@drawable/ic_skill"
        android:title="@string/menu_skills" />
    <item
        android:id="@+id/buildsFragment"
        android:icon="@drawable/ic_build"
        android:title="@string/menu_builds" />
    <item
        android:id="@+id/modelsFragment"
        android:icon="@drawable/ic_model"
        android:title="@string/menu_models" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>